--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,12 @@
     "react": "^18.2.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
-    "react-horizontal-datepicker": "^2.0.3",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "recoil": "^0.7.6",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
