--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dart-sass": "^1.25.0",
+    "date-fns": "^2.29.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
-    "react-horizontal-datepicker": "^2.0.3",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
