--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -31,6 +31,12 @@
     "arrow-body-style": "off",
     "linebreak-style": 0,
     "prefer-arrow-callback": "off",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "jsx-a11y/label-has-associated-control": [
+      2,
+      {
+        "labelAttributes": ["htmlFor"]
+      }
+    ]
   }
 }
