--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -37,6 +37,8 @@
       {
         "labelAttributes": ["htmlFor"]
       }
-    ]
+    ],
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-static-element-interactions": "off"
   }
 }
