--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-sdk": "^2.1306.0",
+    "axios": "^1.3.1",
     "dart-sass": "^1.25.0",
     "date-fns": "^2.29.3",
     "js-sha256": "^0.9.0",
