[ADD] : 1분마다 모든 방 돌면서 방 터뜨리는 폭발머신 추가

--- a/webgyver/src/main/resources/application.properties
+++ b/webgyver/src/main/resources/application.properties
@@ -51,3 +51,6 @@ management.health.db.enabled=true
 management.health.default.enabled=true
 management.health.diskspace.enabled=true
 spring.main.allow-circular-references=true
+#EXPLOER MACHINE TIME
+explore.machine.start.flag=1
+explore.machine.fresh.second=15
