--- a/webgyver/src/main/resources/application.properties
+++ b/webgyver/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 #it will be set build date by gradle. if this value is @build.date@, front-end is development mode
 build.date=@build.date@
-server.port=9001
+server.port=9000
 #server.address=localhost
 server.servlet.contextPath=/
 # Charset of HTTP requests and responses. Added to the "Content-Type" header if not set explicitly.
@@ -10,6 +10,11 @@ server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 # Force the encoding to the configured charset on HTTP requests and responses.
 server.servlet.encoding.force=true
+
+# for SSL
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store-password=${properties.file.password}
 
 ## for SPA
 #spring.web.resources.static-locations=classpath:/dist/
