--- a/webgyver/src/main/resources/application.properties
+++ b/webgyver/src/main/resources/application.properties
@@ -13,7 +13,7 @@ server.servlet.encoding.force=true
 # for SSL
 server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-type=PKCS12
-server.ssl.key-store-password=${properties.file.password}
+server.ssl.key-store-password=${properties.file.ssl.password}
 
 ## for SPA
 #spring.web.resources.static-locations=classpath:/dist/
