[FIX] : 도커 환경변수 수정

--- a/webgyver/Dockerfile
+++ b/webgyver/Dockerfile
@@ -2,4 +2,4 @@ FROM openjdk:8
 EXPOSE 9000
 ARG JAR_FILE=build/libs/webgyver-0.0.1-SNAPSHOT.jar
 COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java", "-jar", "-Dspring-boot.run.arguments=--spring.datasource.url=${properties.file.url}, --spring.datasource.hikari.username=${properties.file.username}, --spring.datasource.hikari.password=${properties.file.password}, --jwt.secret=${properties.file.jwt.secret}", "app.jar"]
+ENTRYPOINT ["java", "-jar", "-Dspring-boot.run.arguments=--spring.datasource.url=${properties.file.url}, --spring.datasource.hikari.username=${properties.file.username}, --spring.datasource.hikari.password=${properties.file.password}, --jwt.secret=${properties.file.jwt.secret}, --server.ssl.key-store-password=${properties.file.ssl.password}", "app.jar"]
