--- a/webgyver/src/main/resources/application.properties
+++ b/webgyver/src/main/resources/application.properties
@@ -11,9 +11,9 @@ server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 
 # for SSL
-#server.ssl.key-store=classpath:keystore.p12
-#server.ssl.key-store-type=PKCS12
-#server.ssl.key-store-password=${properties.file.password}
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store-password=${properties.file.password}
 
 ## for SPA
 #spring.web.resources.static-locations=classpath:/dist/
