[MOD] : 시큐리티 추가중

--- a/webgyver/build.gradle
+++ b/webgyver/build.gradle
@@ -52,6 +52,10 @@ dependencies {
 
     //jwt
     implementation("com.auth0:java-jwt:3.10.3")
+    // JWT
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
     // 음력 변환 라이브러리
     implementation group: 'com.ibm.icu', name: 'icu4j', version: '51.1'
